@@ -19,7 +19,7 @@ subprojects {
             }
         }
         tasks.withType<Test>().configureEach {
-            jvmArgs = listOf("--add-exports","java.base/jdk.internal.vm=ALL-UNNAMED","--enable-preview")
+            jvmArgs = listOf("--add-exports","java.base/jdk.internal.vm=ALL-UNNAMED")
         }
     }
     plugins.withType<JMHPlugin>().configureEach {
@@ -27,7 +27,7 @@ subprojects {
             benchmarkMode = listOf("sample")
             fork.set(1)
             iterations.set(1)
-            jvmArgs.set( listOf("--add-exports","java.base/jdk.internal.vm=ALL-UNNAMED","--enable-preview") )
+            jvmArgs.set( listOf("--add-exports","java.base/jdk.internal.vm=ALL-UNNAMED") )
             warmupIterations.set(1)
         }
     }
